--- a/index.html
+++ b/index.html
@@ -7,26 +7,31 @@
 </head>
 <body>
 <div class="wrapper">
-<form role="form">
+<form name="form" onsubmit="return validate()" action="#" novalidate>
         <div class="form-group">
-            <label for="exampleInputEmail1">Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter Name">
+            <label for="input-name">Name</label>
+            <input type="text" class="form-control" name="name" id="input-name" placeholder="Enter Name">
+            <span class="input-error" id="name-error"></span>
         </div>
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+            <label for="input-email">Email address</label>
+            <input type="email" class="form-control" name="email" id="input-email" placeholder="Enter email">
+            <span class="input-error" id="email-error"></span>
         </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="input-password">Password</label>
+            <input type="password" class="form-control" name="password" id="input-password" placeholder="Password">
+            <span class="input-error" id="password-error"></span>
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox"> Check me out
+                <input type="checkbox" name="agree"> Check me out
             </label>
+            <span class="input-error" id="checkbox-error"></span>
         </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <input type="submit" class="btn btn-default" value="Submit">
 </form>
 </div>
+<script src="js/main.js"></script>
 </body>
 </html>
